Self/playorg/Unpackaged/Config/objects/Drivers_and_Downloads__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>File__c</fullName>
        <label>File</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Importance__c</fullName>
        <label>Importance</label>
        <picklist>
            <picklistValues>
                <fullName>Optional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <label>Drivers and Downloads</label>
    <pluralLabel>Drivers and Downloads</pluralLabel>
</CustomObject>